<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <GridLayout
                android:layout_margin="8dp"
                android:id="@+id/grid_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="11"
                android:columnCount="3" android:baselineAligned="false">
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_row="0"
                      android:layout_column="0"
                      android:textStyle="bold"
                      android:textSize="18sp"
                      android:id="@+id/detail_date_event"
                      android:textAlignment="center"
                      android:textColor="@color/colorPrimaryDark"
                      android:layout_columnSpan="3"/>
            <!--Logo team-->
            <ImageView android:src="@mipmap/ic_launcher"
                       android:layout_width="0dp"
                       android:layout_columnWeight="1"
                       android:layout_height="wrap_content"
                       android:layout_column="0"
                       android:layout_row="1"
                       android:id="@+id/detail_logo_home_team"
                       android:contentDescription="@string/detail_logo_team"/>
            <TextView android:layout_width="0dp"
                      android:layout_columnWeight="1"
                      android:layout_row="1"
                      android:layout_gravity="center_vertical"
                      android:id="@+id/detail_score_team"
                      android:textStyle="bold"
                      android:layout_height="wrap_content"
                      android:textAlignment="center"
                      android:layout_column="1"/>
            <ImageView android:src="@mipmap/ic_launcher"
                       android:layout_width="0dp"
                       android:layout_columnWeight="1"
                       android:layout_row="1"
                       android:layout_height="wrap_content"
                       android:layout_column="2"
                       android:id="@+id/detail_logo_away_team" android:contentDescription="@string/detail_logo_team"/>
            <!--Name team-->
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:layout_row="2"
                    android:textSize="14sp"
                    android:layout_column="0"
                    android:id="@+id/detail_name_home_team"
                    android:textStyle="bold"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:padding="8dp"
                    android:layout_column="2"
                    android:textAlignment="center"
                    android:layout_row="2"
                    android:textSize="14sp"
                    android:id="@+id/detail_name_away_team"
                    android:textStyle="bold"/>
            <!--Goals-->
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:id="@+id/detail_goal_home_team"
                    android:layout_column="0"
                    android:layout_row="3"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_goals"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:layout_column="1"
                    android:textAlignment="center"
                    android:layout_row="3"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:id="@+id/detail_goal_away_team"
                    android:layout_column="2"
                    android:layout_row="3"
            />
            <!--Shots-->
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:id="@+id/detail_shots_home_team"
                    android:layout_column="0"
                    android:layout_row="4"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_shots"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:layout_column="1"
                    android:textAlignment="center"
                    android:layout_row="4"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:id="@+id/detail_shots_away_team"
                    android:layout_column="2"
                    android:layout_row="4"
            />
            <!--Lineups-->
            <TextView android:layout_width="match_parent"
                      android:layout_marginTop="8dp"
                      android:layout_height="wrap_content"
                      android:layout_row="5"
                      android:layout_columnSpan="3"
                      android:layout_column="0"
                      android:text="@string/detail_lineups"
                      android:textAlignment="center"
                      android:textStyle="bold"
                      android:padding="8dp"
                      android:textSize="16sp"
            />
            <!--Goalkeeper-->
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:id="@+id/detail_goalkeeper_home_team"
                    android:layout_column="0"
                    android:layout_row="6"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_goalkeeper"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:layout_column="1"
                    android:textAlignment="center"
                    android:layout_row="6"
                    tools:ignore="HardcodedText"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:id="@+id/detail_goalkeeper_away_team"
                    android:layout_column="2"
                    android:layout_row="6"
            />
            <!--Defense-->
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:id="@+id/detail_defense_home_team"
                    android:layout_column="0"
                    android:layout_row="7"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_defense"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:layout_column="1"
                    android:textAlignment="center"
                    android:layout_row="7"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:id="@+id/detail_defense_away_team"
                    android:layout_column="2"
                    android:layout_row="7"
            />
            <!--Midfield-->
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:id="@+id/detail_midfield_home_team"
                    android:layout_column="0"
                    android:layout_row="8"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_midfield"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:layout_column="1"
                    android:textAlignment="center"
                    android:layout_row="8"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:id="@+id/detail_midfield_away_team"
                    android:layout_column="2"
                    android:layout_row="8"
            />
            <!--Forward-->
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:id="@+id/detail_forward_home_team"
                    android:layout_column="0"
                    android:layout_row="9"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_forward"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:layout_column="1"
                    android:textAlignment="center"
                    android:layout_row="9"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:id="@+id/detail_forward_away_team"
                    android:layout_column="2"
                    android:layout_row="9"
            />
            <!--Subtitues-->
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:id="@+id/detail_subtitutes_home_team"
                    android:layout_column="0"
                    android:layout_row="10"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_subtitutes"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:layout_column="1"
                    android:textAlignment="center"
                    android:layout_row="10"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:id="@+id/detail_subtitutes_away_team"
                    android:layout_column="2"
                    android:layout_row="10"
            />
        </GridLayout>
</ScrollView>